<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PostDetailFragment">

    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/btn"
        android:backgroundTint="@color/btn"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorF" />

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/back"
            android:contentDescription="@string/btn_close"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/detailAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/cardImg" />

        <TextView
            android:id="@+id/detailUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alatsi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailPostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/alatsi"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailPostText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alatsi"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/detailLike"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/like" />

    </LinearLayout>

</RelativeLayout>